--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="elements.html#aboutme" class="image"><img src="images/Image16.jpg" alt="" /></a>
+									<a href="elements.html#aboutme" class="image"><img src="images/image16.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About Me</h2>
 										<p><p>
